<resources>
    <string name="app_name">Selo Info.</string>
    <!-- Menu -->
    <string name="settings">Налаштування</string>
    <string name="advertisement">Оголошення</string>

    <!-- Authorization Fragment -->
    <string name="authorization_text">Натисни кнопку для авторизації</string>
    <string name="authorization_button_name">Авторизація</string>

    <!-- ChooseSelo Fragment -->
    <string name="choose_region_text">Обери область</string>
    <string name="choose_town_text">Обери населений пункт</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- menu -->
    <string name="menu_notification">увєдомлєніє</string>
    <string name="menu_ads">Оголошення</string>
    <string name="menu_events">Афіша</string>
    <string name="menu_contacts">Контакти</string>
    <string name="menu_schedule">Розклад</string>
    <string name="menu_settings">Налаштування</string>


    <!--<string name="default_web_client_id">695720969778-ru6icsn4n9l0jp12o2sadvifmadfjgao.apps.googleusercontent.com</string>
    -->

</resources>