<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_ads"
            android:title="@string/menu_ads"/>

        <item
            android:id="@+id/menu_item_notification"
            android:title="@string/menu_notification"/>

        <item
            android:id="@+id/menu_item_events"
            android:title="@string/menu_events"/>

        <item
            android:id="@+id/menu_item_contacts"
            android:title="@string/menu_contacts"/>

        <item
            android:id="@+id/menu_item_schedule"
            android:title="@string/menu_schedule"/>

        <item
            android:id="@+id/menu_item_settings"
            android:title="@string/menu_settings"/>
    </group>

</menu>